// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`change-appeal-type GET /change-appeal-type/add-horizon-reference should render the add horizon reference page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="horizon-reference"> Horizon reference</label></h1>
                            <input class="govuk-input govuk-input govuk-input--width-10" id="horizon-reference"
                            name="horizon-reference" type="text">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`change-appeal-type GET /change-appeal-type/appeal-type should render the appeal type page for appeals with status assign_case_officer 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - update appeal type</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> Appeal type</h1>
                                </legend>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="appeal-type" name="appealType"
                                        type="radio" value="66" checked>
                                        <label class="govuk-label govuk-radios__label" for="appeal-type">Householder</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="appeal-type-2" name="appealType"
                                        type="radio" value="75">
                                        <label class="govuk-label govuk-radios__label" for="appeal-type-2">Planning</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="appeal-type-3" name="appealType"
                                        type="radio" value="77">
                                        <label class="govuk-label govuk-radios__label" for="appeal-type-3">Planning listed building and conservation area</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="appeal-type-4" name="appealType"
                                        type="radio" value="79">
                                        <label class="govuk-label govuk-radios__label" for="appeal-type-4">Commercial planning (CAS)</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="appeal-type-5" name="appealType"
                                        type="radio" value="78">
                                        <label class="govuk-label govuk-radios__label" for="appeal-type-5">Commercial advertisement (CAS)</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`change-appeal-type GET /change-appeal-type/appeal-type should render the appeal type page for appeals with status validation 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - update appeal type</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> Appeal type</h1>
                                </legend>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="appeal-type" name="appealType"
                                        type="radio" value="66" checked>
                                        <label class="govuk-label govuk-radios__label" for="appeal-type">Householder</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="appeal-type-2" name="appealType"
                                        type="radio" value="75">
                                        <label class="govuk-label govuk-radios__label" for="appeal-type-2">Planning</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="appeal-type-3" name="appealType"
                                        type="radio" value="77">
                                        <label class="govuk-label govuk-radios__label" for="appeal-type-3">Planning listed building and conservation area</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="appeal-type-4" name="appealType"
                                        type="radio" value="79">
                                        <label class="govuk-label govuk-radios__label" for="appeal-type-4">Commercial planning (CAS)</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="appeal-type-5" name="appealType"
                                        type="radio" value="78">
                                        <label class="govuk-label govuk-radios__label" for="appeal-type-5">Commercial advertisement (CAS)</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`change-appeal-type GET /change-appeal-type/appeal-type should render the you cannot update the appeal type page for appeals with status awaiting_event 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">You cannot update the appeal type</h1>
        </div>
    </div>
    <p class="govuk-body">This is because you can only update the appeal type when the status is:</p>
    <ul     class="govuk-list govuk-list--bullet">
        <li>assign case officer</li>
        <li>validation</li>
        </ul>
</main>"
`;

exports[`change-appeal-type GET /change-appeal-type/appeal-type should render the you cannot update the appeal type page for appeals with status awaiting_transfer 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">You cannot update the appeal type</h1>
        </div>
    </div>
    <p class="govuk-body">This is because you can only update the appeal type when the status is:</p>
    <ul     class="govuk-list govuk-list--bullet">
        <li>assign case officer</li>
        <li>validation</li>
        </ul>
</main>"
`;

exports[`change-appeal-type GET /change-appeal-type/appeal-type should render the you cannot update the appeal type page for appeals with status closed 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">You cannot update the appeal type</h1>
        </div>
    </div>
    <p class="govuk-body">This is because you can only update the appeal type when the status is:</p>
    <ul     class="govuk-list govuk-list--bullet">
        <li>assign case officer</li>
        <li>validation</li>
        </ul>
</main>"
`;

exports[`change-appeal-type GET /change-appeal-type/appeal-type should render the you cannot update the appeal type page for appeals with status complete 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">You cannot update the appeal type</h1>
        </div>
    </div>
    <p class="govuk-body">This is because you can only update the appeal type when the status is:</p>
    <ul     class="govuk-list govuk-list--bullet">
        <li>assign case officer</li>
        <li>validation</li>
        </ul>
</main>"
`;

exports[`change-appeal-type GET /change-appeal-type/appeal-type should render the you cannot update the appeal type page for appeals with status event 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">You cannot update the appeal type</h1>
        </div>
    </div>
    <p class="govuk-body">This is because you can only update the appeal type when the status is:</p>
    <ul     class="govuk-list govuk-list--bullet">
        <li>assign case officer</li>
        <li>validation</li>
        </ul>
</main>"
`;

exports[`change-appeal-type GET /change-appeal-type/appeal-type should render the you cannot update the appeal type page for appeals with status evidence 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">You cannot update the appeal type</h1>
        </div>
    </div>
    <p class="govuk-body">This is because you can only update the appeal type when the status is:</p>
    <ul     class="govuk-list govuk-list--bullet">
        <li>assign case officer</li>
        <li>validation</li>
        </ul>
</main>"
`;

exports[`change-appeal-type GET /change-appeal-type/appeal-type should render the you cannot update the appeal type page for appeals with status final_comments 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">You cannot update the appeal type</h1>
        </div>
    </div>
    <p class="govuk-body">This is because you can only update the appeal type when the status is:</p>
    <ul     class="govuk-list govuk-list--bullet">
        <li>assign case officer</li>
        <li>validation</li>
        </ul>
</main>"
`;

exports[`change-appeal-type GET /change-appeal-type/appeal-type should render the you cannot update the appeal type page for appeals with status invalid 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">You cannot update the appeal type</h1>
        </div>
    </div>
    <p class="govuk-body">This is because you can only update the appeal type when the status is:</p>
    <ul     class="govuk-list govuk-list--bullet">
        <li>assign case officer</li>
        <li>validation</li>
        </ul>
</main>"
`;

exports[`change-appeal-type GET /change-appeal-type/appeal-type should render the you cannot update the appeal type page for appeals with status issue_determination 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">You cannot update the appeal type</h1>
        </div>
    </div>
    <p class="govuk-body">This is because you can only update the appeal type when the status is:</p>
    <ul     class="govuk-list govuk-list--bullet">
        <li>assign case officer</li>
        <li>validation</li>
        </ul>
</main>"
`;

exports[`change-appeal-type GET /change-appeal-type/appeal-type should render the you cannot update the appeal type page for appeals with status lpa_questionnaire 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">You cannot update the appeal type</h1>
        </div>
    </div>
    <p class="govuk-body">This is because you can only update the appeal type when the status is:</p>
    <ul     class="govuk-list govuk-list--bullet">
        <li>assign case officer</li>
        <li>validation</li>
        </ul>
</main>"
`;

exports[`change-appeal-type GET /change-appeal-type/appeal-type should render the you cannot update the appeal type page for appeals with status ready_to_start 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">You cannot update the appeal type</h1>
        </div>
    </div>
    <p class="govuk-body">This is because you can only update the appeal type when the status is:</p>
    <ul     class="govuk-list govuk-list--bullet">
        <li>assign case officer</li>
        <li>validation</li>
        </ul>
</main>"
`;

exports[`change-appeal-type GET /change-appeal-type/appeal-type should render the you cannot update the appeal type page for appeals with status statements 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">You cannot update the appeal type</h1>
        </div>
    </div>
    <p class="govuk-body">This is because you can only update the appeal type when the status is:</p>
    <ul     class="govuk-list govuk-list--bullet">
        <li>assign case officer</li>
        <li>validation</li>
        </ul>
</main>"
`;

exports[`change-appeal-type GET /change-appeal-type/appeal-type should render the you cannot update the appeal type page for appeals with status transferred 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">You cannot update the appeal type</h1>
        </div>
    </div>
    <p class="govuk-body">This is because you can only update the appeal type when the status is:</p>
    <ul     class="govuk-list govuk-list--bullet">
        <li>assign case officer</li>
        <li>validation</li>
        </ul>
</main>"
`;

exports[`change-appeal-type GET /change-appeal-type/appeal-type should render the you cannot update the appeal type page for appeals with status withdrawn 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">You cannot update the appeal type</h1>
        </div>
    </div>
    <p class="govuk-body">This is because you can only update the appeal type when the status is:</p>
    <ul     class="govuk-list govuk-list--bullet">
        <li>assign case officer</li>
        <li>validation</li>
        </ul>
</main>"
`;

exports[`change-appeal-type GET /change-appeal-type/appeal-type should render the you cannot update the appeal type page for appeals with status witnesses 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">You cannot update the appeal type</h1>
        </div>
    </div>
    <p class="govuk-body">This is because you can only update the appeal type when the status is:</p>
    <ul     class="govuk-list govuk-list--bullet">
        <li>assign case officer</li>
        <li>validation</li>
        </ul>
</main>"
`;

exports[`change-appeal-type GET /change-appeal-type/change-appeal-final-date should render the final date page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="change-appeal-final-date-hint">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">Deadline to resubmit appeal</legend>
                                <div id="change-appeal-final-date-hint"
                                class="govuk-hint">For example, 29 10 2024</div>
                                <div class="govuk-date-input" id="change-appeal-final-date">
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-day">Day</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="change-appeal-final-date-day" name="change-appeal-final-date-day" type="text"
                                            value="" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-month">Month</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="change-appeal-final-date-month" name="change-appeal-final-date-month"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-year">Year</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input"
                                            id="change-appeal-final-date-year" name="change-appeal-final-date-year"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`change-appeal-type GET /change-appeal-type/check-change-appeal-final-date should render the check change appeal final date page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal APP/Q9999/D/21/351062</span>
            <h1 class="govuk-heading-l">Check details and update timetable due dates</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Deadline to resubmit appeal</dt>
                    <dd                     class="govuk-summary-list__value"></dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/change-appeal-type/change-appeal-final-date">Change <span class="govuk-visually-hidden">Deadline to resubmit appeal</span></a>
                        </dd>
                </div>
            </dl>
            <p class="govuk-body">We will send an email to the appellant to tell them that they need to
                resubmit a new appeal by .</p>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="post" novalidate="novalidate">
                        <button type="submit" class="govuk-button" data-module="govuk-button">Mark appeal as invalid</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`change-appeal-type GET /change-appeal-type/check-transfer should render a 500 error page if the required data is not present in the session 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <h1 class="govuk-heading-xl">Sorry, there is a problem with the service</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <p class="govuk-body">Try again later.</p>
            <p class="govuk-body"><a href="https://has-appeal.herokuapp.com/help/contact" class="govuk-link">Contact the Planning Inspectorate Customer Support</a> if
                the problem persists.</p>
        </div>
    </div>
</main>"
`;

exports[`change-appeal-type GET /change-appeal-type/check-transfer should render the check transfer page, with the appeal reference of the transferred appeal displayed in the summary, if the required data is present in the session 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Check details and mark case as transferred</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Horizon reference</dt>
                    <dd class="govuk-summary-list__value">1234567</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/change-appeal-type/add-horizon-reference">Change<span class="govuk-visually-hidden"> level</span></a>
                    </dd>
                </div>
            </dl>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="post" novalidate="novalidate">
                        <button type="submit" class="govuk-button" data-module="govuk-button">Mark case as transferred</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`change-appeal-type GET /change-appeal-type/resubmit should render the resubmit page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - update appeal type</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <fieldset class="govuk-fieldset">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> Does the appellant need to resubmit the appeal?</h1>
                                </legend>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="appeal-resubmit" name="appealResubmit"
                                        type="radio" value="true">
                                        <label class="govuk-label govuk-radios__label" for="appeal-resubmit">Yes</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="appeal-resubmit-2" name="appealResubmit"
                                        type="radio" value="false">
                                        <label class="govuk-label govuk-radios__label" for="appeal-resubmit-2">No</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`change-appeal-type GET /change-appeal-type/update-appeal should render the check details and update appeal page 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
            <h1 class="govuk-heading-l">Check details and update appeal type</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <dl class="govuk-summary-list">
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Appeal type</dt>
                    <dd class="govuk-summary-list__value">Planning</dd>
                    <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/change-appeal-type/appeal-type">Change <span class="govuk-visually-hidden">Appeal type</span></a>
                    </dd>
                </div>
                <div class="govuk-summary-list__row"><dt class="govuk-summary-list__key"> Does the appellant need to resubmit the appeal?</dt>
                    <dd                     class="govuk-summary-list__value">No</dd>
                        <dd class="govuk-summary-list__actions"><a class="govuk-link" href="/appeals-service/appeal-details/1/change-appeal-type/resubmit">Change <span class="govuk-visually-hidden">Does the appellant need to resubmit the appeal? </span></a>
                        </dd>
                </div>
            </dl>
            <p class="govuk-body">We will send an email to the relevant parties to tell them that the appeal
                type has changed.</p>
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="post" novalidate="novalidate">
                        <button type="submit" class="govuk-button" data-module="govuk-button">Update appeal type</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`change-appeal-type POST /change-appeal-type/add-horizon-reference should re-render the add horizon reference page with an error message if no horizon reference was provided 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#horizon-reference">Enter a valid Horizon appeal reference</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="horizon-reference"> Horizon reference</label></h1>
                            <input class="govuk-input govuk-input govuk-input--width-10" id="horizon-reference"
                            name="horizon-reference" type="text">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`change-appeal-type POST /change-appeal-type/add-horizon-reference should re-render the add horizon reference page with an error message if the provided horizon reference was not valid 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#horizon-reference">Enter a valid Horizon appeal reference</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group">
                            <h1 class="govuk-label-wrapper"><label class="govuk-label govuk-label--l" for="horizon-reference"> Horizon reference</label></h1>
                            <input class="govuk-input govuk-input govuk-input--width-10" id="horizon-reference"
                            name="horizon-reference" type="text">
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`change-appeal-type POST /change-appeal-type/appeal-type should re-render the appeal type page with an error message if required field is missing 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#appeal-type">Select the appeal type</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - update appeal type</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <fieldset class="govuk-fieldset" aria-describedby="appeal-type-error">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> Appeal type</h1>
                                </legend>
                                <p id="appeal-type-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Select the appeal type</p>
                                <div                                 class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="appeal-type" name="appealType"
                                        type="radio" value="66" checked>
                                        <label class="govuk-label govuk-radios__label" for="appeal-type">Householder</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="appeal-type-2" name="appealType"
                                        type="radio" value="75">
                                        <label class="govuk-label govuk-radios__label" for="appeal-type-2">Planning</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="appeal-type-3" name="appealType"
                                        type="radio" value="77">
                                        <label class="govuk-label govuk-radios__label" for="appeal-type-3">Planning listed building and conservation area</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="appeal-type-4" name="appealType"
                                        type="radio" value="79">
                                        <label class="govuk-label govuk-radios__label" for="appeal-type-4">Commercial planning (CAS)</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="appeal-type-5" name="appealType"
                                        type="radio" value="78">
                                        <label class="govuk-label govuk-radios__label" for="appeal-type-5">Commercial advertisement (CAS)</label>
                                    </div>
                        </div>
                        </fieldset>
                </div>
                <button type="submit" data-prevent-double-click="true" class="govuk-button"
                data-module="govuk-button">Continue</button>
                </form>
            </div>
        </div>
    </div>
    </div>
</main>"
`;

exports[`change-appeal-type POST /change-appeal-type/change-appeal-final-date should re-render the final date page with an error message if an invalid date was provided 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#change-appeal-final-date-day">Deadline to resubmit the appeal must be a real date</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="change-appeal-final-date-hint change-appeal-final-date-error">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">Deadline to resubmit appeal</legend>
                                <div id="change-appeal-final-date-hint"
                                class="govuk-hint">For example, 29 10 2024</div>
                                <p id="change-appeal-final-date-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Deadline to resubmit
                                    the appeal must be a real date</p>
                                <div class="govuk-date-input" id="change-appeal-final-date">
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-day">Day</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input govuk-input--error"
                                            id="change-appeal-final-date-day" name="change-appeal-final-date-day" type="text"
                                            value="29" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-month">Month</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input govuk-input--error"
                                            id="change-appeal-final-date-month" name="change-appeal-final-date-month"
                                            type="text" value="2" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-year">Year</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input govuk-input--error"
                                            id="change-appeal-final-date-year" name="change-appeal-final-date-year"
                                            type="text" value="3000" inputmode="numeric">
                                        </div>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`change-appeal-type POST /change-appeal-type/change-appeal-final-date should re-render the final date page with an error message if required field is missing 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#change-appeal-final-date-day">Enter the deadline to resubmit the appeal</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="change-appeal-final-date-hint change-appeal-final-date-error">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">Deadline to resubmit appeal</legend>
                                <div id="change-appeal-final-date-hint"
                                class="govuk-hint">For example, 29 10 2024</div>
                                <p id="change-appeal-final-date-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Enter the deadline to
                                    resubmit the appeal</p>
                                <div class="govuk-date-input" id="change-appeal-final-date">
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-day">Day</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input govuk-input--error"
                                            id="change-appeal-final-date-day" name="change-appeal-final-date-day" type="text"
                                            value="" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-month">Month</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input govuk-input--error"
                                            id="change-appeal-final-date-month" name="change-appeal-final-date-month"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-year">Year</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input govuk-input--error"
                                            id="change-appeal-final-date-year" name="change-appeal-final-date-year"
                                            type="text" value="" inputmode="numeric">
                                        </div>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`change-appeal-type POST /change-appeal-type/change-appeal-final-date should re-render the final date page with an error message if the provided date day is invalid 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#change-appeal-final-date-day">Deadline to resubmit the appeal day must be between 1 and 31</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="change-appeal-final-date-hint change-appeal-final-date-error">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">Deadline to resubmit appeal</legend>
                                <div id="change-appeal-final-date-hint"
                                class="govuk-hint">For example, 29 10 2024</div>
                                <p id="change-appeal-final-date-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Deadline to resubmit
                                    the appeal day must be between 1 and 31</p>
                                <div class="govuk-date-input"
                                id="change-appeal-final-date">
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-day">Day</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input govuk-input--error"
                                            id="change-appeal-final-date-day" name="change-appeal-final-date-day" type="text"
                                            value="32" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-month">Month</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="change-appeal-final-date-month" name="change-appeal-final-date-month"
                                            type="text" value="11" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-year">Year</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input"
                                            id="change-appeal-final-date-year" name="change-appeal-final-date-year"
                                            type="text" value="2024" inputmode="numeric">
                                        </div>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`change-appeal-type POST /change-appeal-type/change-appeal-final-date should re-render the final date page with an error message if the provided date month is invalid 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#change-appeal-final-date-month">Deadline to resubmit the appeal month must be between 1 and 12</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="change-appeal-final-date-hint change-appeal-final-date-error">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">Deadline to resubmit appeal</legend>
                                <div id="change-appeal-final-date-hint"
                                class="govuk-hint">For example, 29 10 2024</div>
                                <p id="change-appeal-final-date-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Deadline to resubmit
                                    the appeal month must be between 1 and 12</p>
                                <div class="govuk-date-input"
                                id="change-appeal-final-date">
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-day">Day</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="change-appeal-final-date-day" name="change-appeal-final-date-day" type="text"
                                            value="1" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-month">Month</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input govuk-input--error"
                                            id="change-appeal-final-date-month" name="change-appeal-final-date-month"
                                            type="text" value="13" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-year">Year</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input"
                                            id="change-appeal-final-date-year" name="change-appeal-final-date-year"
                                            type="text" value="2024" inputmode="numeric">
                                        </div>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`change-appeal-type POST /change-appeal-type/change-appeal-final-date should re-render the final date page with an error message if the provided date year is invalid 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#change-appeal-final-date-year">Deadline to resubmit the appeal year must be a number</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="change-appeal-final-date-hint change-appeal-final-date-error">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">Deadline to resubmit appeal</legend>
                                <div id="change-appeal-final-date-hint"
                                class="govuk-hint">For example, 29 10 2024</div>
                                <p id="change-appeal-final-date-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Deadline to resubmit
                                    the appeal year must be a number</p>
                                <div class="govuk-date-input" id="change-appeal-final-date">
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-day">Day</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="change-appeal-final-date-day" name="change-appeal-final-date-day" type="text"
                                            value="11" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-month">Month</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input"
                                            id="change-appeal-final-date-month" name="change-appeal-final-date-month"
                                            type="text" value="11" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-year">Year</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input govuk-input--error"
                                            id="change-appeal-final-date-year" name="change-appeal-final-date-year"
                                            type="text" value="x" inputmode="numeric">
                                        </div>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`change-appeal-type POST /change-appeal-type/check-transfer should render a 500 error page if the required data is not present in the session 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <h1 class="govuk-heading-xl">Sorry, there is a problem with the service</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <p class="govuk-body">Try again later.</p>
            <p class="govuk-body"><a href="https://has-appeal.herokuapp.com/help/contact" class="govuk-link">Contact the Planning Inspectorate Customer Support</a> if
                the problem persists.</p>
        </div>
    </div>
</main>"
`;

exports[`change-appeal-type POST /change-appeal-type/resubmit should re-render the resubmit page with an error message if required field is missing 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#appeal-resubmit">Select yes if the appellant needs to resubmit the appeal</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062 - update appeal type</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <fieldset class="govuk-fieldset" aria-describedby="appeal-resubmit-error">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
                                    <h1 class="govuk-fieldset__heading"> Does the appellant need to resubmit the appeal?</h1>
                                </legend>
                                <p id="appeal-resubmit-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> Select yes if the appellant
                                    needs to resubmit the appeal</p>
                                <div class="govuk-radios" data-module="govuk-radios">
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="appeal-resubmit" name="appealResubmit"
                                        type="radio" value="true">
                                        <label class="govuk-label govuk-radios__label" for="appeal-resubmit">Yes</label>
                                    </div>
                                    <div class="govuk-radios__item">
                                        <input class="govuk-radios__input" id="appeal-resubmit-2" name="appealResubmit"
                                        type="radio" value="false">
                                        <label class="govuk-label govuk-radios__label" for="appeal-resubmit-2">No</label>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`change-appeal-type POST /change-appeal-type/update-appeal should render a 500 error page if the required data is not present in the session 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <h1 class="govuk-heading-xl">Sorry, there is a problem with the service</h1>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <p class="govuk-body">Try again later.</p>
            <p class="govuk-body"><a href="https://has-appeal.herokuapp.com/help/contact" class="govuk-link">Contact the Planning Inspectorate Customer Support</a> if
                the problem persists.</p>
        </div>
    </div>
</main>"
`;

exports[`change-appeal-type should re-render the final date page with an error message if the provided date is not a business day: abbreviated month name 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#change-appeal-final-date-day">The date must be a business day</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="change-appeal-final-date-hint change-appeal-final-date-error">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">Deadline to resubmit appeal</legend>
                                <div id="change-appeal-final-date-hint"
                                class="govuk-hint">For example, 29 10 2024</div>
                                <p id="change-appeal-final-date-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> The date must be a business
                                    day</p>
                                <div class="govuk-date-input" id="change-appeal-final-date">
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-day">Day</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input govuk-input--error"
                                            id="change-appeal-final-date-day" name="change-appeal-final-date-day" type="text"
                                            value="4" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-month">Month</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input govuk-input--error"
                                            id="change-appeal-final-date-month" name="change-appeal-final-date-month"
                                            type="text" value="Jan" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-year">Year</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input govuk-input--error"
                                            id="change-appeal-final-date-year" name="change-appeal-final-date-year"
                                            type="text" value="2030" inputmode="numeric">
                                        </div>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`change-appeal-type should re-render the final date page with an error message if the provided date is not a business day: full month name 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#change-appeal-final-date-day">The date must be a business day</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="change-appeal-final-date-hint change-appeal-final-date-error">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">Deadline to resubmit appeal</legend>
                                <div id="change-appeal-final-date-hint"
                                class="govuk-hint">For example, 29 10 2024</div>
                                <p id="change-appeal-final-date-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> The date must be a business
                                    day</p>
                                <div class="govuk-date-input" id="change-appeal-final-date">
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-day">Day</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input govuk-input--error"
                                            id="change-appeal-final-date-day" name="change-appeal-final-date-day" type="text"
                                            value="4" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-month">Month</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input govuk-input--error"
                                            id="change-appeal-final-date-month" name="change-appeal-final-date-month"
                                            type="text" value="January" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-year">Year</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input govuk-input--error"
                                            id="change-appeal-final-date-year" name="change-appeal-final-date-year"
                                            type="text" value="2030" inputmode="numeric">
                                        </div>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;

exports[`change-appeal-type should re-render the final date page with an error message if the provided date is not a business day: numeric month 1`] = `
"<main class="govuk-main-wrapper" id="main-content">
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-error-summary" data-module="govuk-error-summary">
                <div role="alert">
                    <h2 class="govuk-error-summary__title"> There is a problem</h2>
                    <div class="govuk-error-summary__body">
                        <ul class="govuk-list govuk-error-summary__list">
                            <li><a href="#change-appeal-final-date-day">The date must be a business day</a>
                            </li>
                        </ul>
                    </div>
                </div>
            </div>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds"><span class="govuk-caption-l">Appeal 351062</span>
        </div>
    </div>
    <div class="govuk-grid-row">
        <div class="govuk-grid-column-two-thirds">
            <div class="govuk-grid-row">
                <div class="govuk-grid-column-full">
                    <form method="POST" novalidate="novalidate">
                        <div class="govuk-form-group govuk-form-group--error">
                            <fieldset class="govuk-fieldset" role="group" aria-describedby="change-appeal-final-date-hint change-appeal-final-date-error">
                                <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">Deadline to resubmit appeal</legend>
                                <div id="change-appeal-final-date-hint"
                                class="govuk-hint">For example, 29 10 2024</div>
                                <p id="change-appeal-final-date-error" class="govuk-error-message"><span class="govuk-visually-hidden">Error:</span> The date must be a business
                                    day</p>
                                <div class="govuk-date-input" id="change-appeal-final-date">
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-day">Day</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input govuk-input--error"
                                            id="change-appeal-final-date-day" name="change-appeal-final-date-day" type="text"
                                            value="4" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-month">Month</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-2 govuk-input govuk-date-input__input govuk-input--error"
                                            id="change-appeal-final-date-month" name="change-appeal-final-date-month"
                                            type="text" value="1" inputmode="numeric">
                                        </div>
                                    </div>
                                    <div class="govuk-date-input__item">
                                        <div class="govuk-form-group">
                                            <label class="govuk-label govuk-date-input__label" for="change-appeal-final-date-year">Year</label>
                                            <input class="govuk-input govuk-date-input__input govuk-input--width-4 govuk-input govuk-date-input__input govuk-input--error"
                                            id="change-appeal-final-date-year" name="change-appeal-final-date-year"
                                            type="text" value="2030" inputmode="numeric">
                                        </div>
                                    </div>
                                </div>
                            </fieldset>
                        </div>
                        <button type="submit" data-prevent-double-click="true" class="govuk-button"
                        data-module="govuk-button">Continue</button>
                    </form>
                </div>
            </div>
        </div>
    </div>
</main>"
`;
